@@ -1,2 +1,7 @@
 # javafx_tutorial
 Udemy course
+
+
+https://stackoverflow.com/questions/51478675/error-javafx-runtime-components-are-missing-and-are-required-to-run-this-appli
+
+VM options -> --module-path /path/to/JavaFX/lib --add-modules=javafx.controls,javafx.fxml,javafx.web,javafx.graphics    y los que queramos
